[package]
name = "HeMI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = "0.19.1"
ndarray = "0.15.4"
ndarray-csv = "0.5.1"
csv = "1.1.6"
serde = { version = "1", features = ["derive"] }
configparser = "3.0.0"
rand = "0.8.4"
either = "1.6.1"
ordered-float = "2.10.0"
json = "0.12.4"